# beatsaber-autocut

./: .gitignore  LICENSE  README.md  config.toml.example  main.py  pyproject.toml
docs/: specification.md
src/bs_autocut/: cli.py  cli_select.py  config_loader.py  models.py  orchestrator.py
src/bs_autocut/clip/: ffmpeg_runner.py  planner.py
src/bs_autocut/db/: reader.py
src/bs_autocut/output/: filename_builder.py
src/bs_autocut/session/: __init__.py  filter.py
src/bs_autocut/video/: metadata.py  scanner.py
tests/: conftest.py  test_cli.py  test_cli_select.py  test_config_loader.py  test_ffmpeg_runner.py  test_orchestrator.py  test_planner.py  test_session_filter.py  test_video_metadata.py  test_video_scanner.py
