[project]
name = "beatsaber-autocut"
version = "0.1.0"
description = "Automatic Beat Saber clip extraction from DataRecorder logs"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.scripts]
bs-autocut = "bs_autocut.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bs_autocut"]
